--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 /*
 /*/
 !/.gitignore
-!admin/modules/cloudflare/
-!inc/plugins/cloudflare.php
+!/admin/modules/cloudflare/
+!/inc/plugins/cloudflare.php
